--- a/a3_task2_marco_palombo.Rmd
+++ b/a3_task2_marco_palombo.Rmd
@@ -184,6 +184,7 @@ In the code chunk below, use `ymd()` to convert a date that you choose in `YYYY-
 ```{r}
 # Your code here: 
 
+ymd(20210910)
 
 ```
 
@@ -209,8 +210,11 @@ In the code chunk below, create a vector (using `c()`, as above) stored as `some
 
 ```{r}
 # Your code here: 
+# create vector of stored dates from above
+some_dates <- c(11061972, 02142007,01301843)
+some_dates_converted <- mdy(some_dates)
 
-
+class(some_dates_converted)
 ```
 
 #### 3C. Follow me
@@ -254,6 +258,20 @@ Starting from the `lakers` dataset, create a new dataset called `gasol_hookshots
 ```{r}
 # Your code here: 
 
+# start with lakers dat set
+gasol_hookshots <- lakers %>% 
+  
+  # filter for rows wit Pau Gasol as the player
+  filter(player == "Pau Gasol" & type == "hook") %>% 
+  
+  #update date column to year month date
+  mutate(date = ymd(date)) %>% 
+  
+  # create new column of month
+  mutate(month = month(date)) %>% 
+
+  # count up number of entries per month
+  count(month)
 
 ```
 
